# Avaliacao_CED

./: CMakeLists.txt  Makefile  README.md  speedup_calculate.py  visualize_simulation.py
GPU_cuda/: main.cu  nsc_solver.cu  nsc_solver.cuh  nsc_solver.h
OpenMp/: main.cpp  nsc_solver.cpp  nsc_solver.h
max_perf_cuda/: main.cu  nsc_solver.cu  nsc_solver.cu.save  nsc_solver.cuh
sequential_imp/: main.cpp  nsc_solver.cpp  nsc_solver.h
